# m11n-demo-pos

./: .gitignore  package-lock.json  package.json  tailwind.config.js
sql-agent/: report-sale.sh
src/: style.css
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/migrations/2023-02-10-212642_create_sales_table/: up.sql
src-tauri/src/: main.rs  models.rs  schema.rs
src-tauri/src/db/: mod.rs  models.rs
src/components/: Layout.tsx
src/components/cli/: CliLayout.tsx  Container.tsx  ErrorModal.tsx  OkModal.tsx  POSBanner.tsx  TechnogiBanner.tsx
src/data/: products.ts
src/lib/: sales.ts
src/pages/: _app.tsx  help.tsx  index.tsx  products.tsx  sales.tsx
src/pages/cli/: index.tsx  products.tsx  sales.tsx
